<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.franklin.bancodedados.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@mipmap/jedi"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Seu novo Nome:"
            android:textColor="@color/corJedi" />

        <EditText
            android:id="@+id/etnome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idade"
            android:textColor="@color/corJedi" />


        <EditText
            android:id="@+id/etendereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura"
            android:textColor="@color/corJedi" />


        <EditText
            android:id="@+id/etempresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

        <Button
            android:id="@+id/btinserir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/corJedi"
            android:text="@string/aliar"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btlistar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/corJedi"
            android:text="@string/ver"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
