<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="br.com.franklin.bancodedados.Main2Activity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@mipmap/star"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:id="@+id/imageView" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Seja bem Vindo!"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_marginTop="100dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/escolha"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginTop="60dp"/>




    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:weightSum="2"

        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/Sith"
            android:background="#840202"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginRight="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/Jedi"
            android:textSize="20sp"
            android:background="#2089a0"
            android:textColor="#ffffff"/>



    </LinearLayout>
</LinearLayout>
